// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Headers component > renders header with actions correctly 1`] = `
<div>
  <header
    class="flex items-start justify-between"
  >
    <h1
      class="_text--heading-1_1aw48_13"
      data-testid="title"
    >
      Example for header with actions 
    </h1>
    <div
      class="flex flex-wrap justify-end items-center"
    >
      <div
        class="w-min"
        id="navigation-action-trigger-1"
      >
        <ods-button
          aria-label="common_actions"
          data-testid="navigation-action-trigger-action"
          icon="chevron-down"
          id="1"
          is-disabled="false"
          is-loading="false"
          label="common_actions"
          size="sm"
          slot="menu-title"
          variant="outline"
        />
      </div>
      <ods-popover
        class="py-[8px] px-0 w-max"
        data-testid="navigation-action-trigger-action-popover"
        trigger-id="navigation-action-trigger-1"
        with-arrow="true"
      >
        <div
          class="flex flex-col"
        >
          <a
            href="https://www.ovh.com"
            target="_blank"
          >
            <ods-button
              class="menu-item-button w-full"
              display-tooltip="false"
              href="https://www.ovh.com"
              label="Action 1"
              size="sm"
              target="_blank"
              variant="ghost"
            />
          </a>
          <a
            href="https://help.ovhcloud.com/csm/fr-documentation?id=kb_home"
            target="_blank"
          >
            <ods-button
              class="menu-item-button w-full"
              display-tooltip="false"
              href="https://help.ovhcloud.com/csm/fr-documentation?id=kb_home"
              label="Action 2"
              size="sm"
              target="_blank"
              variant="ghost"
            />
          </a>
        </div>
      </ods-popover>
    </div>
  </header>
</div>
`;

exports[`Headers component > renders header with header buttons correctly 1`] = `
<div>
  <header
    class="flex items-start justify-between"
  >
    <h1
      class="_text--heading-1_1aw48_13"
      data-testid="title"
    >
      Example for header with header buttons
    </h1>
    <div
      class="flex flex-wrap justify-end items-center"
    >
      <div
        id="navigation-menu-changelog-trigger"
      >
        <ods-button
          class="whitespace-nowrap"
          label="mrc_changelog_header"
          size="sm"
          slot="menu-title"
          variant="ghost"
        />
      </div>
      <ods-popover
        position="bottom"
        trigger-id="navigation-menu-changelog-trigger"
        with-arrow="true"
      >
        <div>
          <a
            class="_link_udbet_2 _link--no-text_udbet_29"
            href="https://ovh.com/"
            label="mrc_changelog_changelog"
            rel="external"
            target="_blank"
          >
            <span>
              ​
            </span>
            <span
              class="_icon_i4xp0_2 _icon--external-link_i4xp0_190"
            />
          </a>
        </div>
        <div>
          <a
            class="_link_udbet_2 _link--no-text_udbet_29"
            href="https://ovh.com/"
            label="mrc_changelog_roadmap"
            rel="external"
            target="_blank"
          >
            <span>
              ​
            </span>
            <span
              class="_icon_i4xp0_2 _icon--external-link_i4xp0_190"
            />
          </a>
        </div>
        <div>
          <a
            class="_link_udbet_2 _link--no-text_udbet_29"
            href="https://ovh.com/"
            label="mrc_changelog_feature-request"
            rel="external"
            target="_blank"
          >
            <span>
              ​
            </span>
            <span
              class="_icon_i4xp0_2 _icon--external-link_i4xp0_190"
            />
          </a>
        </div>
      </ods-popover>
      <div
        id="navigation-menu-guide-trigger"
      >
        <ods-button
          class="block"
          icon="book"
          label="user_account_guides_header"
          size="sm"
          slot="menu-title"
          variant="ghost"
        />
      </div>
      <ods-popover
        position="bottom"
        trigger-id="navigation-menu-guide-trigger"
        with-arrow="true"
      >
        <div
          class="flex flex-col gap-2 py-1"
        >
          <a
            class="_link_udbet_2 _link--no-text_udbet_29"
            href="https://www.ovh.com"
            label="ovh.com"
            target="_blank"
          >
            <span>
              ​
            </span>
            <span
              class="_icon_i4xp0_2 _icon--external-link_i4xp0_190"
            />
          </a>
          <a
            class="_link_udbet_2 _link--no-text_udbet_29"
            href="https://help.ovhcloud.com/csm/fr-documentation?id=kb_home"
            label="Guides OVH"
            target="_blank"
          >
            <span>
              ​
            </span>
            <span
              class="_icon_i4xp0_2 _icon--external-link_i4xp0_190"
            />
          </a>
        </div>
      </ods-popover>
    </div>
  </header>
</div>
`;

exports[`Headers component > renders header with title 1`] = `
<div>
  <header
    class="flex items-start justify-between"
  >
    <h1
      class="_text--heading-1_1aw48_13"
      data-testid="title"
    >
      Example for header
    </h1>
  </header>
</div>
`;
